# mimium-rs

./: .clinerules  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Development.md  Readme.ja.md  Readme.md  Roadmap.md  dist-workspace.toml  mimium-rs.code-workspace  plan-variant.md  stage0_vm_migration_plan.md
crates/lib/mimium-lang/: Cargo.toml  build.rs  webdriver.json
crates/lib/mimium-lang/benches/: bench.rs
crates/lib/mimium-lang/src/: ast.rs  compiler.rs  interner.rs  interpreter.rs  lib.rs  mir.rs  pattern.rs  plugin.rs  repl.rs  runtime.rs  types.rs  utils.rs
crates/lib/mimium-lang/src/ast/: builder.rs  operators.rs  program.rs  resolve_include.rs  statement.rs
crates/lib/mimium-lang/src/compiler/: block_pass.rs  bytecodegen.rs  intrinsics.rs  mimium_placeholder.rs.template  mimium_test_main.rs.template  mirgen.rs  parser.rs  pattern_destructor.rs  rustgen.rs  translate_staging.rs  typing.rs  wasmgen.rs
crates/lib/mimium-lang/src/compiler/mirgen/: convert_pronoun.rs  convert_qualified_names.rs  pattern_destructor.rs  recursecheck.rs
crates/lib/mimium-lang/src/compiler/parser/: README.md  cst_parser.rs  cst_test_helpers.rs  ebnf.md  error.rs  green.rs  lexer.rs  lower.rs  mod.rs  preparser.rs  red.rs  test.rs  token.rs  tokenizer.rs
crates/lib/mimium-lang/src/compiler/tests/: hirgen.rs
crates/lib/mimium-lang/src/compiler/typing/: unification.rs
crates/lib/mimium-lang/src/interpreter/: serde_impl.rs
crates/lib/mimium-lang/src/lossless_parser/: cst_parser.rs  cst_test_helpers.rs  green.rs  lower.rs  mod.rs  preparser.rs  red.rs  token.rs  tokenizer.rs
crates/lib/mimium-lang/src/mir/: print.rs
crates/lib/mimium-lang/src/parser/: mod.rs
crates/lib/mimium-lang/src/plugin/: builtin_functins.rs  codegen_combinators.rs  loader.rs  system_plugin.rs
crates/lib/mimium-lang/src/runtime/: ffi.rs  ffi_serde.rs  primitives.rs  vm.rs  vm_ffi.rs  wasm.rs
crates/lib/mimium-lang/src/runtime/vm/: bytecode.rs  heap.rs  primitives.rs  program.rs  ringbuffer.rs  test.rs
crates/lib/mimium-lang/src/runtime/wasm/: engine.rs
crates/lib/mimium-lang/src/types/: builder.rs  serde_impl.rs
crates/lib/mimium-lang/src/utils/: environment.rs  error.rs  fileloader.cjs  fileloader.js  fileloader.mjs  fileloader.rs  metadata.rs  module_env.rs
crates/lib/mimium-lang/state-tree/: Cargo.toml  README.md
crates/lib/mimium-lang/state-tree/src/: diff.rs  lib.rs  patch.rs  tree.rs  tree_diff.rs
crates/lib/mimium-lang/state-tree/tests/: delay.rs  diff.rs  diff_patch_tree.rs  end2end.rs  tagless.rs
crates/lib/mimium-lang/tests/: cst_parser_tests.rs  plugin_loader_test.rs  test_session_globals_serde.rs
crates/lib/mimium-web/: Cargo.toml  README.md  package-lock.json  package.json  playwright.config.mjs
crates/lib/mimium-web/e2e/: index.html  module-use.spec.mjs
crates/lib/mimium-web/scripts/: e2e-server.mjs
crates/lib/mimium-web/src/: lib.rs
crates/lib/plugins/mimium-midi/: Cargo.toml  readme.md
crates/lib/plugins/mimium-midi/examples/: midiin.mmm  midiin_macro.mmm
crates/lib/plugins/mimium-midi/src/: lib.rs
crates/lib/plugins/mimium-plugin-macros/: Cargo.toml
crates/lib/plugins/mimium-plugin-macros/src/: lib.rs
crates/lib/plugins/mimium-plugin-macros/tests/: basic.rs
crates/lib/plugins/mimium-symphonia/: Cargo.toml  Readme.md
crates/lib/plugins/mimium-symphonia/examples/: symphonia.mmm
crates/lib/plugins/mimium-symphonia/src/: filemanager.rs  lib.rs
crates/lib/plugins/mimium-symphonia/tests/: integration_test.rs  macro_ffi_test.rs
crates/lib/plugins/mimium-symphonia/tests/assets/: konnichiwa.aif
crates/lib/plugins/mimium-symphonia/tests/mmm/: loadwav.mmm  loadwav_interp.mmm  loadwav_length.mmm
crates/lib/plugins/mimium-symphonia/tests/mmm/nested/: loadwav_relative_to_source_file.mmm
docs/: rust_codegen.md  rust_codegen_manual_main.rs
examples/: 0b5vr.mmm  biquad.mmm  cascadeosc.mmm  cascadeosc_macro.mmm  compressor.mmm  distortion.mmm  fbdelay.mmm  fbdelay_mod.mmm  fmpiano.mmm  jcrev.mmm  livecoding_demo.mmm  midiin.mmm  nime2026_demo.mmm  noise.mmm  passthrough.mmm  pattern_test.mmm  rain.mmm  reactive_f.mmm  reactive_sequencer.mmm  robot.mmm  scale.mmm  sequencer.mmm  sinewave.mmm  subtract_synth.mmm  subtract_synth_demo.mmm  supersaw.mmm  uzulang.mmm  windmodel.mmm
lib/: composition.mmm  core.mmm  delay.mmm  drive.mmm  dynamics.mmm  env.mmm  filter.mmm  math.mmm  mininotation.mmm  modulation.mmm  noise.mmm  osc.mmm  parser.mmm  pattern.mmm  reactive.mmm  reverb.mmm  sequencer.mmm  space.mmm
mimium-lang/: Cargo.toml  build.rs  test_debug.rs  test_simple_parser.rs  test_simple_treesitter.rs  test_source.mmm
mimium-lang/benches/: bench.rs
mimium-lang/src/: ast.rs  ast_interpreter.rs  compiler.rs  interner.rs  interpreter.rs  lib.rs  mir.rs  pattern.rs  plugin.rs  runtime.rs  types.rs  utils.rs
mimium-lang/src/ast/: builder.rs  operators.rs  program.rs  resolve_include.rs  statement.rs
mimium-lang/src/compiler/: bytecodegen.rs  desugar.rs  mirgen.rs  parser.rs  pattern_destructor.rs  typing.rs
mimium-lang/src/compiler/mirgen/: convert_pronoun.rs  recursecheck.rs  test.rs
mimium-lang/src/compiler/parser/: error.rs  lexer.rs  resolve_include.rs  statement.rs  test.rs  token.rs
mimium-lang/src/compiler/tree_sitter_parser/: bindings.rs  mod.rs
mimium-lang/src/compiler/typing/: unification.rs
mimium-lang/src/interpreter/: builtin.rs  type_destructor.rs
mimium-lang/src/mir/: print.rs
mimium-lang/src/plugin/: builtin_functins.rs  system_plugin.rs
mimium-lang/src/runtime/: builtin_fn.rs  vm.rs
mimium-lang/src/runtime/vm/: builtin.rs  program.rs  test.rs
mimium-lang/src/types/: builder.rs
mimium-lang/src/utils/: atomic.rs  environment.rs  error.rs  fileloader.cjs  fileloader.js  fileloader.rs
mimium-lang/tree-sitter-mimium/: grammar.js
mimium-lang/tree-sitter-mimium/src/: grammar.json  node-types.json  parser.c
mimium-lsp/: Cargo.toml  README.md
mimium-lsp/src/: lib.rs  main.rs  server.rs
mimium-lsp/src/capabilities/: completion.rs  diagnostics.rs  hover.rs  mod.rs  semantic_tokens.rs
(+285 files in other folders)
