[workspace]

members = [
    "crates/lib/mimium-lang",
    "crates/lib/mimium-web",
    "crates/lib/mimium-test",
    "crates/lib/plugins/mimium-audiodriver",
    "crates/lib/plugins/mimium-scheduler",
    "crates/lib/plugins/mimium-symphonia",
    "crates/lib/plugins/mimium-midi",
    "crates/lib/plugins/mimium-guitools",
    "crates/bin/mimium-cli",
    "crates/bin/mimium-fmt",
    "crates/bin/mimium-language-server",
    "crates/bin/mimium-bintools",
]

resolver = "2"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
version = "2.4.1-alpha"
repository = "https://github.com/mimium-org/mimium-rs/"
readme = "Readme.md"
authors = ["Tomoya Matsuura <me@matsuuratomoya.com>"]

[workspace.dependencies]
mimium-lang = { path = "crates/lib/mimium-lang", version = "2.4.1-alpha" }
mimium-test = { path = "crates/lib/mimium-test" }
mimium-web = { path = "crates/lib/mimium-web", version = "2.4.1-alpha" }
mimium-audiodriver = { path = "crates/lib/plugins/mimium-audiodriver", version = "2.4.1-alpha" }
mimium-midi = { path = "crates/lib/plugins/mimium-midi", version = "2.4.1-alpha" }
mimium-symphonia = { path = "crates/lib/plugins/mimium-symphonia", version = "2.4.1-alpha" }
mimium-scheduler = { path = "crates/lib/plugins/mimium-scheduler", version = "2.4.1-alpha" }
mimium-guitools = { path = "crates/lib/plugins/mimium-guitools", version = "2.4.1-alpha" }
mimium-cli = { path = "crates/bin/mimium-cli", version = "2.4.1-alpha" }
mimium-fmt = { path = "crates/bin/mimium-fmt", version = "2.4.1-alpha" }
mimium-language-server = { path = "crates/bin/mimium-language-server", version = "2.4.1-alpha" }

itertools = "0.13.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3"

# do not add git tag for each crates on release.
[workspace.metadata.release]
tag-prefix = ""

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
