[workspace]

members = [
    "crates/lib/mimium-lang",
    "crates/lib/mimium-lang/state-tree",
    "crates/lib/mimium-web",
    "crates/lib/mimium-test",
    "crates/lib/plugins/mimium-audiodriver",
    "crates/lib/plugins/mimium-scheduler",
    "crates/lib/plugins/mimium-symphonia",
    "crates/lib/plugins/mimium-midi",
    "crates/lib/plugins/mimium-guitools",
    "crates/bin/mimium-cli",
    "crates/bin/mimium-fmt",
    "crates/bin/mimium-diff-visualizer",
    "crates/bin/mimium-language-server",
    "crates/bin/mimium-bintools",
]

resolver = "2"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
version = "3.1.1"
repository = "https://github.com/mimium-org/mimium-rs/"
readme = "Readme.md"
authors = ["Tomoya Matsuura <me@matsuuratomoya.com>"]

[workspace.dependencies]
mimium-lang = { path = "crates/lib/mimium-lang", version = "3.1.1" }
state-tree = { path = "crates/lib/mimium-lang/state-tree", version = "3.1.1" }
mimium-test = { path = "crates/lib/mimium-test" }
mimium-web = { path = "crates/lib/mimium-web", version = "3.1.1" }
mimium-audiodriver = { path = "crates/lib/plugins/mimium-audiodriver", version = "3.1.1" }
mimium-midi = { path = "crates/lib/plugins/mimium-midi", version = "3.1.1" }
mimium-symphonia = { path = "crates/lib/plugins/mimium-symphonia", version = "3.1.1" }
mimium-scheduler = { path = "crates/lib/plugins/mimium-scheduler", version = "3.1.1" }
mimium-guitools = { path = "crates/lib/plugins/mimium-guitools", version = "3.1.1" }
mimium-cli = { path = "crates/bin/mimium-cli", version = "3.1.1" }
mimium-fmt = { path = "crates/bin/mimium-fmt", version = "3.1.1" }
mimium-language-server = { path = "crates/bin/mimium-language-server", version = "3.1.1" }

itertools = "0.13.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3"
ringbuf = "0.4.7"
atomic_float = "1.1.0"
log = "0.4.28"
colog = "1.3.0"


# do not add git tag for each crates on release.
[workspace.metadata.release]
tag-prefix = ""

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
