[package]
name = "mimium-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for the mimium programming language"

[dependencies]
mimium-lang = { workspace = true }
tower-lsp = "0.20.0"
tokio = { version = "1.35.1", features = ["full"] }
dashmap = "5.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
futures = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mimium-lsp"
path = "src/main.rs"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
