[package]
name = "mimium-lang"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "mimium(minimal-musical-medium) an infrastructural programming language for sound and music."
readme.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chumsky = { version = "0.11", features = ["lexical-numbers", "pratt"] }
ariadne = "0.5"
string-interner = "0.17.0"
slotmap = "1.0.7"
log = { workspace = true }
colog = { workspace = true }
half = "2.4.1"
intx = "0.1.0"
itertools.workspace = true
wasm-bindgen.workspace = true
state-tree = { workspace = true }
thiserror = { workspace = true }

# WASM backend dependencies
wasm-encoder = "0.221"
wasmtime = "27.0"
wat = "1.221"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
homedir = { version = "0.3.4" }
mimalloc = { version = "0.1.43" }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[lints.clippy]
useless_format = "allow"
expect_fun_call = "allow"
