[package]
name = "mimium-lang"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "mimium(minimal-musical-medium) an infrastructural programming language for sound and music."
readme.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
chumsky = { version = "0.11", features = ["lexical-numbers", "pratt"] }
ariadne = "0.5"
string-interner = "0.17.0"
slotmap = { version = "1.0.7", features = ["serde"] }
log = { workspace = true }
colog = { workspace = true }
half = "2.4.1"
intx = "0.1.0"
itertools.workspace = true
wasm-bindgen.workspace = true
state-tree = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# WASM backend dependencies (only for native targets)
wasm-encoder = "0.221"
wasmtime = "27.0"
wat = "1.221"
homedir = { version = "0.3.4" }
mimalloc = { version = "0.1.43" }
libloading = "0.8"

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[lints.clippy]
useless_format = "allow"
expect_fun_call = "allow"
