[package]
name = "mimium-web"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description = "mimium wasm binding package."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mimium-lang = { workspace = true }
mimium-audiodriver = { workspace = true }
mimium-scheduler = { workspace = true }

wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.64"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"
itertools.workspace = true
[dev-dependencies]
wasm-bindgen-test = { workspace = true }
