[package]
name = "mimium-midi"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "midi input plugin for mimium using midir."
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
dynamic-plugin-abi = []

[dependencies]
atomic_float = { workspace = true }
midir = "0.10.0"

mimium-lang = { workspace = true }
mimium-plugin-macros = { workspace = true }
wmidi = "4.0.10"
bincode = { workspace = true }

[dev-dependencies]
mimium-test = { workspace = true }
