[package]
name = "mimium-plugin-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for mimium plugin development"
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
mimium-lang = { workspace = true }
