[package]
name = "mimium-symphonia"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "sound file sampler implementation using symphonia for mimium."
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]


[dependencies]

mimium-lang = { workspace = true }
symphonia = { version = "0.5.4", features = ["all-codecs"] }

[dev-dependencies]
mimium-test = { workspace = true }
