[package]
name = "mimium-symphonia"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "sound file sampler implementation using symphonia for mimium."
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]

mimium-lang = { workspace = true }
mimium-plugin-macros = { workspace = true }
symphonia = { version = "0.5.4", features = ["all-codecs"] }

[dev-dependencies]
mimium-test = { workspace = true }
mimium-audiodriver = { workspace = true }
