[package]
name = "mimium-symphonia"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "sound file sampler implementation using symphonia for mimium."
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["dynamic-plugin-abi"]
dynamic-plugin-abi = []


[dependencies]

mimium-lang = { workspace = true }
mimium-plugin-macros = { workspace = true }
symphonia = { version = "0.5.4", features = ["all-codecs"] }
bincode = { workspace = true }
[dev-dependencies]
mimium-test = { workspace = true }
mimium-audiodriver = { workspace = true }
